results/SVCOMP/4-shot/log-ExSymExe27-2024_03_18_19_28_37.txt
class Main {

  //@ ensures \result ==> test(a, b, a);
  public static boolean f() {
    int a = 3;
    Main inst = new Main();
    int b = 8;
    return inst.test(a, b, a);
  }

  //@ ensures \result ==> (x == z && y == z + x && x < y && (z > 0 ==> System.out.println("branch BOO1") || System.out.println("branch BOO2")) || (x >= y ==> false));
  /*
   * test concrete = symbolic
   * (con#sym#sym)
   */
  public boolean test(int x, int y, int z) {
    System.out.println("Testing ExSymExe27");
    x = z;
    y = z + x;
    if (x < y) System.out.println("branch FOO1");
    else {
      return false;
    }
    if (z > 0) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");

    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe27.java:3: error: cannot find symbol
  //@ ensures \result ==> test(a, b, a);
                               ^
  symbol:   variable a
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe27.java:3: error: cannot find symbol
  //@ ensures \result ==> test(a, b, a);
                                  ^
  symbol:   variable b
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe27.java:3: error: cannot find symbol
  //@ ensures \result ==> test(a, b, a);
                                     ^
  symbol:   variable a
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe27.java:11: error: 'void' type not allowed here
  //@ ensures \result ==> (x == z && y == z + x && x < y && (z > 0 ==> System.out.println("branch BOO1") || System.out.println("branch BOO2")) || (x >= y ==> false));
                                                                                         ^
/home/max/Documents/JMLGPT/tmp/ExSymExe27.java:11: error: 'void' type not allowed here
  //@ ensures \result ==> (x == z && y == z + x && x < y && (z > 0 ==> System.out.println("branch BOO1") || System.out.println("branch BOO2")) || (x >= y ==> false));
                                                                                                                              ^
5 errors

